Formats LESS to Less.

--- a/src/static/css/main.less
+++ b/src/static/css/main.less
@@ -1,20 +1,20 @@
 /* ==========================================================================
    Capital Framework
-   Master LESS File
+   Master Less File
    ========================================================================== */
 
-// @import Normalize before all other LESS/CSS
+// @import Normalize before all other Less/CSS
 @import (less) "../../vendor/normalize-css/normalize.css";
 @import (less) "../../vendor/normalize-legacy-addon/normalize-legacy-addon.css";
 
-// @import combined CF component LESS
+// @import combined CF component Less
 @import (less) "../../vendor/cf-concat/cf.less";
 
-//* @import other components' LESS below
+//* @import other components' Less below
 @import (less) "../../vendor/font-awesome/font-awesome.css";
 
 
-/* Project-specific LESS goes below
+/* Project-specific Less goes below
    ========================================================================== */
 
 // The following example styles are use on the framework test page (index.html)
