Fixes comment text.

--- a/src/static/css/main.less
+++ b/src/static/css/main.less
@@ -1,5 +1,5 @@
 /* ==========================================================================
-   Capital Framework
+   cfgov-refresh
    Master Less File
    ========================================================================== */
 
