--- a/static/css/main.less
+++ b/static/css/main.less
@@ -17,6 +17,9 @@
 /* Project-specific Less goes below
    ========================================================================== */
 
+@import (less) "media-block.less";
+
+
 .demo-banner {
     padding: 0.5em 1em;
     margin-bottom: 1em;
