--- a/static/css/media-object.less
+++ b/static/css/media-object.less
@@ -7,10 +7,7 @@
     name: Media object
     family: cfgov-media-object
     patterns:
-    - notes:
-        - Move category to its own pattern like category slug?
-        - Make unstyled link mixin?
-      markup: |
+    - markup: |
         <article class="media-object">
             <h1 class="media-object_header">
                 Preventing illegal discrimination in auto lending
