--- a/static/css/utilities.less
+++ b/static/css/utilities.less
@@ -3,13 +3,14 @@
    utilities
    ========================================================================== */
 
+
 /* topdoc
     name: Less mixins
     family: cfgov-utilities
     patterns:
     - codenotes:
-        - |
-          .u-right();
+        - .u-right();
+        - .u-unstyled-link();
     tags:
     - cfgov-utilities
 */
@@ -17,6 +18,12 @@
 .u-right() {
     float: right;
 }
+
+.u-unstyled-link() {
+    color: @black;
+    border-bottom-width: 0;
+}
+
 
 /* topdoc
   name: EOF
