--- a/static/css/meta.less
+++ b/static/css/meta.less
@@ -16,8 +16,7 @@
 */
 
 .date {
-    // Use &:extend(h5);?
-    .h5();
+    &:extend(h5);
     color: @gray;
 }
 
@@ -36,7 +35,6 @@
 */
 
 .category-slug {
-    /* &:extend(h4); */
     &:extend(h4);
     .u-unstyled-link();
 }
