--- a/static/css/main.less
+++ b/static/css/main.less
@@ -14,24 +14,18 @@
 @import (less) "../../vendor/font-awesome/font-awesome.css";
 
 
-/* Project-specific Less goes below
+/* Demo-specific styles
+   ========================================================================== */
+
+@import (less) "demo.less";
+
+
+/* Project-specific styles
    ========================================================================== */
 
 @import (less) "meta.less";
 @import (less) "utilities.less";
 @import (less) "media-object.less";
-
-
-.demo-banner {
-    padding: 0.5em 1em;
-    margin-bottom: 1em;
-    background: @gray-20;
-    .webfont-regular;
-
-    &_back-link {
-        margin-right: 1em;
-    }
-}
 
 
 .content {
