--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2229,8 +2229,8 @@ ul {
  * -------------------------- */
 @font-face {
   font-family: 'FontAwesome';
-  src: url("../fonts/fontawesome-webfont.eot?v=3.2.1");
-  src: url("../fonts/fontawesome-webfont.eot?#iefix&v=3.2.1") format('embedded-opentype'), url("../fonts/fontawesome-webfont.woff?v=3.2.1") format('woff'), url("../fonts/fontawesome-webfont.ttf?v=3.2.1") format('truetype'), url("../fonts/fontawesome-webfont.svg#fontawesomeregular?v=3.2.1") format('svg');
+  src: url('../font/fontawesome-webfont.eot?v=3.2.1');
+  src: url('../font/fontawesome-webfont.eot?#iefix&v=3.2.1') format('embedded-opentype'), url('../font/fontawesome-webfont.woff?v=3.2.1') format('woff'), url('../font/fontawesome-webfont.ttf?v=3.2.1') format('truetype'), url('../font/fontawesome-webfont.svg#fontawesomeregular?v=3.2.1') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -3645,7 +3645,36 @@ a .icon-flip-vertical:before {
 .icon-renren:before {
   content: "\f18b";
 }
-/* Project-specific Less goes below
+/* Demo-specific styles
+   ========================================================================== */
+/* ==========================================================================
+   cfgov-refresh
+   demo
+   ========================================================================== */
+.demo-banner {
+  padding: 0.5em 1em;
+  background: #e3e4e5;
+  font-family: "Avenir Next", Arial, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+}
+.demo-banner_back-link {
+  margin-right: 1em;
+}
+.demo-placeholder {
+  display: inline-block;
+  padding: 0.5714285714285714em 0.8571428571428571em;
+  margin: 1.5em 0;
+  color: #75787b;
+  font-family: "Avenir Next", Arial, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 0.875em;
+  line-height: 1;
+  border: 2px dashed #babbbd;
+  background: #f8f8f8;
+}
+/* Project-specific styles
    ========================================================================== */
 /* ==========================================================================
    cfgov-refresh
@@ -3782,17 +3811,6 @@ a .icon-flip-vertical:before {
   name: EOF
   eof: true
 */
-.demo-banner {
-  padding: 0.5em 1em;
-  margin-bottom: 1em;
-  background: #e3e4e5;
-  font-family: "Avenir Next", Arial, sans-serif;
-  font-style: normal;
-  font-weight: normal;
-}
-.demo-banner_back-link {
-  margin-right: 1em;
-}
 .content {
   display: inline-block;
   -webkit-box-sizing: border-box;
