--- a/static/css/main.less
+++ b/static/css/main.less
@@ -63,9 +63,7 @@
 }
 
 
-/* ==========================================================================
-   .post-preview
-   ========================================================================== */
+// Post styles
 
 .post-preview + .post-preview {
     margin-top: 50px;
