--- a/static/css/meta.less
+++ b/static/css/meta.less
@@ -27,7 +27,7 @@
     patterns:
     - markup: |
         <a href="#" class="category-slug">
-            <i class="cf-icon"></i>
+            <i class="cf-icon cf-icon-credit-card"></i>
             Consumer finance
         </a>
     tags:
