Updates meta example.

--- a/static/css/meta.less
+++ b/static/css/meta.less
@@ -47,7 +47,7 @@
     - markup: |
         <div class="meta-header">
             <a href="#" class="category-slug meta-header_heading">
-                <i class="cf-icon"></i>
+                <i class="cf-icon cf-icon-credit-card"></i>
                 Consumer finance
             </a>
             <span class="date meta-header_date">
