--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4605,7 +4605,7 @@ a .icon-flip-vertical:before {
     - markup: |
         <div class="meta-header">
             <a href="#" class="category-slug meta-header_heading">
-                <i class="cf-icon"></i>
+                <i class="cf-icon cf-icon-credit-card"></i>
                 Consumer finance
             </a>
             <span class="date meta-header_date">
