--- a/static/css/main.less
+++ b/static/css/main.less
@@ -23,8 +23,9 @@
 /* Project-specific styles
    ========================================================================== */
 
-@import (less) "meta.less";
+@import (less) "vars.less";
 @import (less) "utilities.less";
+@import (less) "meta.less";
 @import (less) "media-object.less";
 
 
