Misc tweaks, removes extend usa in favor of mixins.

--- a/static/css/media-object.less
+++ b/static/css/media-object.less
@@ -27,8 +27,7 @@
 */
 
 .media-object_header {
-    /* &:extend(h3); */
-    &:extend(h3);
+    .h3();
     @media @respond-to-medium-screens-min {
         .h2();
     }
