--- a/static/css/meta.less
+++ b/static/css/meta.less
@@ -16,7 +16,7 @@
 */
 
 .date {
-    &:extend(h5);
+    .h5();
     color: @gray;
 }
 
@@ -35,7 +35,7 @@
 */
 
 .category-slug {
-    &:extend(h4);
+    .h4();
     .u-unstyled-link();
 }
 
