--- a/static/css/main.css
+++ b/static/css/main.css
@@ -426,18 +426,15 @@ h2 {
   font-size: 1.5em;
   margin: 0.83em 0;
 }
-h3,
-.media-object_header {
+h3 {
   font-size: 1.17em;
   margin: 1em 0;
 }
-h4,
-.category-slug {
+h4 {
   font-size: 1em;
   margin: 1.33em 0;
 }
-h5,
-.date {
+h5 {
   font-size: 0.83em;
   margin: 1.67em 0;
 }
@@ -2793,10 +2790,7 @@ h6,
 .h3,
 .h4,
 .h5,
-.h6,
-.date,
-.category-slug,
-.media-object_header {
+.h6 {
   margin-top: 0;
   font-family: "Avenir Next", Arial, sans-serif;
   font-style: normal;
@@ -2815,15 +2809,13 @@ h2,
   line-height: 1.2692307692307692;
 }
 h3,
-.h3,
-.media-object_header {
+.h3 {
   margin-bottom: 1em;
   font-size: 1.375em;
   line-height: 1.2727272727272727;
 }
 h4,
-.h4,
-.category-slug {
+.h4 {
   font-family: "Avenir Next Medium", Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
@@ -2834,8 +2826,7 @@ h4,
 h5,
 h6,
 .h5,
-.h6,
-.date {
+.h6 {
   font-family: "Avenir Next Demi", Arial, sans-serif;
   font-style: normal;
   font-weight: bold;
@@ -2843,8 +2834,7 @@ h6,
   text-transform: uppercase;
 }
 h5,
-.h5,
-.date {
+.h5 {
   margin-bottom: 1.5714285714285714em;
   font-size: 0.875em;
   line-height: 1.5714285714285714;
@@ -4572,15 +4562,42 @@ a .icon-flip-vertical:before {
    vars
    ========================================================================== */
 /* topdoc
-    name: Less vars
+    name: Media query vars
     family: cfgov-vars
     patterns:
-    - codenotes:
+    - name: Size calculations
+      notes:
+        - "You shouldn't need to use these vars directly,
+          they're used to create the @respond-to vars which you should use instead."
+      codenotes:
+        - "@small-screens-min"
+        - "@small-screens-max"
         - "@medium-screens-min"
         - "@medium-screens-max"
-    - codenotes:
+        - "@large-screens-min"
+        - "@large-screens-max"
+        - "@extralarge-screens-min"
+    - name: Interpolated media type and expressions
+      codenotes:
+        - "@respond-to-small-screens-min"
+        - "@respond-to-small-screens-max"
         - "@respond-to-medium-screens-min"
         - "@respond-to-medium-screens-max"
+        - "@respond-to-large-screens-min"
+        - "@respond-to-large-screens-max"
+        - "@respond-to-extralarge-screens-min"
+    - name: "Usage"
+      codenotes:
+        - |
+            @media @respond-to-medium-screens-min {
+                ...
+            }
+
+            Compiles to:
+
+            @media only all and (min-width: 48em) {
+                ...
+            }
     tags:
     - cfgov-vars
 */
@@ -4597,14 +4614,15 @@ a .icon-flip-vertical:before {
     family: cfgov-utilities
     patterns:
     - codenotes:
-        - .u-right();
-        - .u-unstyled-link();
+          - .u-right();
+    - codenotes:
+          - .u-unstyled-link();
     tags:
     - cfgov-utilities
 */
 /* topdoc
-  name: EOF
-  eof: true
+    name: EOF
+    eof: true
 */
 /* ==========================================================================
    cfgov-refresh
@@ -4622,6 +4640,17 @@ a .icon-flip-vertical:before {
     - cfgov-meta
 */
 .date {
+  margin-top: 0;
+  font-family: "Avenir Next", Arial, sans-serif;
+  font-weight: normal;
+  font-family: "Avenir Next Demi", Arial, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  margin-bottom: 1.5714285714285714em;
+  font-size: 0.875em;
+  line-height: 1.5714285714285714;
   color: #75787b;
 }
 /* topdoc
@@ -4637,8 +4666,41 @@ a .icon-flip-vertical:before {
     - cfgov-meta
 */
 .category-slug {
+  margin-top: 0;
+  font-family: "Avenir Next", Arial, sans-serif;
+  font-weight: normal;
+  font-family: "Avenir Next Medium", Arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  margin-bottom: 1.2222222222222223em;
+  font-size: 1.125em;
+  line-height: 1.2222222222222223;
   color: #101820;
   border-bottom-width: 0;
+}
+.category-slug:visited,
+.category-slug.visited {
+  border-bottom-color: #101820;
+  color: #101820;
+}
+.category-slug:hover,
+.category-slug.hover {
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+  border-bottom-color: #101820;
+  color: #101820;
+}
+.category-slug:focus,
+.category-slug.focus {
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+}
+.category-slug:active,
+.category-slug.active {
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+  border-bottom-color: #101820;
+  color: #101820;
 }
 /* topdoc
     name: Meta header
@@ -4700,8 +4762,13 @@ a .icon-flip-vertical:before {
     - cfgov-media-object
 */
 .media-object_header {
-  /* &:extend(h3); */
-
+  margin-top: 0;
+  font-family: "Avenir Next", Arial, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  margin-bottom: 1em;
+  font-size: 1.375em;
+  line-height: 1.2727272727272727;
 }
 @media only all and (min-width: 48em) {
   .media-object_header {
