--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4888,6 +4888,29 @@ a .icon-flip-vertical:before {
   font-weight: normal;
 }
 /* topdoc
+  name: Media object with image
+  family: cfgov-media-object-hide
+  patterns:
+    - markup: |
+        <article class="media-object media-object__with-image">
+            <img src="http://placekitten.com/290/150">
+            <h1 class="media-object_header">
+                Preventing illegal discrimination in auto lending
+            </h1>
+            <p class="media-object_text">
+                Every year, millions of American families buy a car –
+                and it will be one of the most significant purchases they make.
+                One key priority for us is protecting consumers from the silent
+                pickpocket of discrimination.
+            </p>
+            <p class="media-object_byline">
+                By Patrice Ficklin
+            </p>
+        </article>
+  tags:
+    - cfgov-media-object
+*/
+/* topdoc
   name: EOF
   eof: true
 */
